--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@ echo "Server IP : " . $server;
 ?>
 <br><br>
 
-<a href="https://Facebook.com/AnonTeamX.gov">Anonymous TeaM X</a>
+<a href="https://Facebook.com/AnonTeamX.gov">JETPREMIUM</a>
 </font size="5">
 </center>
